--- a/views/404.ejs
+++ b/views/404.ejs
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+	<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -18,8 +18,8 @@
       </ul>
     </nav>
 
-    <div class="blogs content">
-      <h2>All Blogs</h2>
+    <div class="not-found content">
+      <h2>OOPS! Page Not Found!</h2>
     </div>
   </body>
 </html>
