--- a/views/create.ejs
+++ b/views/create.ejs
@@ -18,8 +18,16 @@
       </ul>
     </nav>
 
-    <div class="blogs content">
-      <h2>All Blogs</h2>
+    <div class="create-blog content">
+      <form>
+        <label for="title">Blog Title:</label>
+        <input type="text" name="title" id="title" required />
+        <label for="snippet">Blog Snippet:</label>
+        <input type="text" name="snippet" id="snippet" required />
+        <label for="body">Blog Body:</label>
+        <textarea id="body" required></textarea>
+        <button type="submit">Submit</button>
+      </form>
     </div>
   </body>
 </html>
