learned Server Side Rendering SSR

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Blog Ninja</title>
+    <title>Blog Ninja | <%= title %> </title>
   </head>
   <body>
     <nav>
@@ -20,6 +20,14 @@
 
     <div class="blogs content">
       <h2>All Blogs</h2>
+      <% if(blogs.length > 0) { %> 
+        <% blogs.map((blog) => { %>
+          <h3 class="title"><%= blog.title %></h3>
+          <p class="snippet"><%= blog.snippet %></p>
+        <% }) %> 
+      <% } else { %> 
+        <h3>No blogs here...</h3>
+      <% } %> 
     </div>
   </body>
 </html>
