--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,33 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Blog Ninja | <%= title %> </title>
-  </head>
+  <%- include('./partials/head.ejs') %>
   <body>
-    <nav>
-      <div class="site-title">
-        <a href="/"><h1>Blog Ninja</h1></a>
-      </div>
-      <ul>
-        <li><a href="/">Blogs</a></li>
-        <li><a href="/about">About</a></li>
-        <li><a href="/blogs/create">New Blog</a></li>
-      </ul>
-    </nav>
+    <!-- NAV PARTIALS -->
+    <%- include('./partials/nav.ejs') %>
 
     <div class="blogs content">
       <h2>All Blogs</h2>
-      <% if(blogs.length > 0) { %> 
-        <% blogs.map((blog) => { %>
-          <h3 class="title"><%= blog.title %></h3>
-          <p class="snippet"><%= blog.snippet %></p>
-        <% }) %> 
-      <% } else { %> 
-        <h3>No blogs here...</h3>
-      <% } %> 
+      <% if(blogs.length > 0) { %> <% blogs.map((blog) => { %>
+      <h3 class="title"><%= blog.title %></h3>
+      <p class="snippet"><%= blog.snippet %></p>
+      <% }) %> <% } else { %>
+      <h3>No blogs here...</h3>
+      <% } %>
     </div>
+
+    <%- include('./partials/footer.ejs') %>
   </body>
 </html>
