--- a/views/create.ejs
+++ b/views/create.ejs
@@ -6,13 +6,13 @@
     <%- include('./partials/nav.ejs') %>
 
     <div class="create-blog content">
-      <form>
+      <form action="/blogs" method="POST">
         <label for="title">Blog Title:</label>
         <input type="text" name="title" id="title" required />
         <label for="snippet">Blog Snippet:</label>
         <input type="text" name="snippet" id="snippet" required />
         <label for="body">Blog Body:</label>
-        <textarea id="body" required></textarea>
+        <textarea id="body" name="body" required></textarea>
         <button type="submit">Submit</button>
       </form>
     </div>
