--- a/views/blogs/details.ejs
+++ b/views/blogs/details.ejs
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-  <%- include('./partials/head.ejs') %>
+  <%- include('../partials/head.ejs') %>
   <body>
     <!-- NAV PARTIALS -->
-    <%- include('./partials/nav.ejs') %>
+    <%- include('../partials/nav.ejs') %>
 
     <div class="details content">
       <h2><%= blog.title%></h2>
@@ -15,7 +15,7 @@
       >
     </div>
 
-    <%- include('./partials/footer.ejs') %>
+    <%- include('../partials/footer.ejs') %>
 
     <script>
       const trashBtn = document.querySelector('#delete-btn');
