--- a/views/blogs/index.ejs
+++ b/views/blogs/index.ejs
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-  <%- include('./partials/head.ejs') %>
+  <%- include('../partials/head.ejs') %>
   <body>
     <!-- NAV PARTIALS -->
-    <%- include('./partials/nav.ejs') %>
+    <%- include('../partials/nav.ejs') %>
 
     <div class="blogs content">
       <h2>All Blogs</h2>
@@ -17,6 +17,6 @@
       <% } %>
     </div>
 
-    <%- include('./partials/footer.ejs') %>
+    <%- include('../partials/footer.ejs') %>
   </body>
 </html>
